--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1>[OQ] Quadball Tactical Board</h1>
         </div>
         <div class="controls">
-            <button id="reset">RESET</button>
-            <button id="undo">UNDO</button>
-            <button id="redo">REDO</button>
+            <button id="reset">リセット</button>
+            <button id="undo">元に戻す</button>
+            <button id="redo">やり直す</button>
         </div>
         <canvas id="tacticalBoard"></canvas>
     </div>
